# NED-Net

./: .gitattributes  .gitignore  README.md  Start NED-Net (Native).bat  USER_MANUAL.md  capture_screenshots.py  font_theme_demo.py  pyproject.toml  requirements.txt  setup.py  start-nednet-native.sh
Implementations/: Dash_State_Management_Spec.docx  EEG_Platform_Full_Spec.docx  Phase 1.docx
NED-Net.app/Contents/: Info.plist
Streamlit/eeg_seizure_analyzer/: config.py
eeg_seizure_analyzer/: __init__.py  analysis.py  config.py  db.py
eeg_seizure_analyzer/app/: components.py  page_detection.py  page_export.py  page_spikes.py  page_viewer.py
eeg_seizure_analyzer/dash_app/: components.py  desktop.py  main.py  server_state.py
eeg_seizure_analyzer/detection/: autocorrelation_seizure.py  base.py  boundary_utils.py  confidence.py  ensemble_seizure.py  seizure.py  spectral_band_seizure.py  spike.py  spike_train_seizure.py  spike_utils.py
eeg_seizure_analyzer/io/: adicht_reader.py  adicht_to_edf.py  annotation_store.py  annotations.py  base.py  batch_metadata.py  channel_ids.py  dataset_store.py  edf_reader.py  persistence.py
eeg_seizure_analyzer/ml/: __init__.py  bendr_model.py  bendr_pretrain.py  dataset.py  model.py  predict.py  spike_dataset.py  spike_predict.py  spike_train.py  train.py
eeg_seizure_analyzer/processing/: activity.py
eeg_seizure_analyzer/validation/: metrics.py
scripts/: PRETRAIN_TODO.md
scripts/arrhenius/: GUIDE.md  _common.sh  pretrain.sh  pretrain_short.sh  resume.sh  setup_env.sh  test_gpu.sh  (+1 more)
windows_import_service/: app.py
(+40 files in other folders)
