[project]
name = "eeg-seizure-analyzer"
version = "0.1.0"
description = "Detect and quantify seizures and interictal activity in mouse EEG recordings"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pyedflib>=0.1.34",
    "plotly>=5.18",
    "pandas>=2.0",
    "dash>=2.14",
    "dash-bootstrap-components>=1.5",
    "dash-ag-grid>=31.0",
]

[project.optional-dependencies]
windows = ["adi-reader>=0.0.13", "cffi"]
ml = ["torch>=2.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
eeg-convert = "eeg_seizure_analyzer.io.adicht_to_edf:main"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
